# verifi

./: .lando.env  .lando.sh  .lando.yml  install_dependencies.sh  manage.py  pyproject.toml
src/electeurs/: actions.py  apps.py  communes.csv  departements.csv  forms.py  models.py  urls.py  views.py
src/electeurs/management/commands/: anomalies.py  import_electeurs.py  index.py  pretraitement_listes.py
src/electeurs/migrations/: 0001_initial.py  0002_entreerecherche_nom_usage_and_more.py
src/verifi/: asgi.py  settings.py  urls.py  wsgi.py
wp/verifi/: admin.php  verifi-handler.php  verifi-shortcode.php  verifi.php
